# test_cource

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_04_12_2150-a2f8354d1067_create_products_table.py  2024_04_14_1946-67f4c573dc09_create_tables_products_and_users.py  2024_04_14_1955-6203ac9fc2de_create_posts_table.py  2024_04_14_2026-2d8e66655d20_create_profile_table.py  2024_04_16_1006-f9229b959ca1_create_orders_table.py  2024_04_16_1035-3dff5cbec5fc_create_order_product_table_table.py  2024_04_16_1123-cb549e53f9ee_add_column_count_in_order_product_many.py  2024_04_16_1209-8c15e5f497db_add_column_unit_price_in_.py
src/: __init__.py  config.py  database.py  db_helper.py  main.py
src/auth/: README.md  router.py  schemas.py  utils.py
src/items/: router.py
src/models/: mixins.py  post.py  profile.py
src/orders/: models.py  order_product_many.py
src/posts/: models.py
src/products/: crud.py  dependensies.py  models.py  router.py  schemas.py
src/users/: crud.py  models.py  router.py  schemas.py
